Our Locations spacing issues, Mobile UI issues, affiliate title and height of the card issues

--- a/app/assets/styles/modules/_aboutUs.scss
+++ b/app/assets/styles/modules/_aboutUs.scss
@@ -229,14 +229,13 @@
 	}
 
 	.about-popular-content {
-		background: #eff1fe;
-		padding: 0;
+		background: #eff1fe; 
 		margin-top: 60px;
+		padding: 50px;
 		position: relative;
     	z-index: 99;
 		@include atSize700 { 
-			background: url("images/popular-bg.png") -200px 0 ;
-			padding: 60px;
+			background: url("images/popular-bg.png") -200px 0 ;			 
 		}
 
 		@include atSizeXXLarge {
@@ -245,7 +244,22 @@
 		}
 	}
 }
+.about-popular-content {
+	background: #eff1fe;
+	padding: 50px;
+	margin-top: 60px;
+	position: relative;
+	z-index: 99;
+	@include atSize700 { 
+		background: url("images/popular-bg.png") -200px 0 ;
+		padding: 60px;
+	}
 
+	@include atSizeXXLarge {
+		background: url('images/popular-bg.png') 0 0 ;
+		padding: 120px;
+	}
+}
 .z-999 {
 	z-index: 999
 }
