--- a/themes/custom/athena/assets/styles/modules/_contactUs.scss
+++ b/themes/custom/athena/assets/styles/modules/_contactUs.scss
@@ -240,3 +240,7 @@ h1.title {
 	  }
   }
 }
+
+.webform-flexbox { 
+    margin: 0 -0.5em;
+}
